Initial commit of Oliveit stack application
